# nifti2dicom

./: .mailmap  .travis.yml  AUTHORS  CMakeLists.txt  COPYING.ITK  COPYING.VTK  NEWS  Nifti2DicomConfig.h.cmake  README  README.md  appveyor.yml  n2dAccessionNumberValidator.cxx  n2dAccessionNumberValidator.h  n2dCommandLineParser.cxx  n2dCommandLineParser.h  n2dDefsCommandLineArgsStructs.h  n2dDefsIO.h  n2dDicomTagsImporter.cxx  n2dDicomTagsImporter.h  n2dImageDefs.h  n2dInputFilter.cxx  n2dInputFilter.h  n2dInputImporter.cxx  n2dInputImporter.h  n2dMetaDataDictionaryTools.cxx  n2dMetaDataDictionaryTools.h  n2dOutputExporter.cxx  n2dOutputExporter.h  n2dSlicer.cxx  n2dSlicer.h  n2dUIDGenerator.cxx  n2dUIDGenerator.h  n2dVitalStatisticsImporter.cxx  n2dVitalStatisticsImporter.h  nifti2dicom.cxx  nifti2dicomCommandLineParser.h
Formula/: nifti2dicom_macos.rb
cmake/: FindTCLAP.cmake
data/: CMakeLists.txt  nifti2dicom.metainfo.xml  qnifti2dicom.appdata.xml  qnifti2dicom.desktop
data/icons/: CMakeLists.txt
debian/: changelog  control  copyright  nifti2dicom-data.install  nifti2dicom.install  qnifti2dicom.install  rules  watch
debian/patches/: 0001-Fix-warnings-on-.desktop-file-reported-by-lintian.patch  nd-backport.patch  nd-backport_LINK_PRIVATE.patch  nd-backport_itk-use-file.patch  series  squeeze-dsc-patch  trusty-dsc-patch  wheezy-dsc-patch
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
doc/man/: help2man.include  nifti2dicom.help2man.include  qnifti2dicom.help2man.include
doc/man/man1/: nifti2dicom.1  qnifti2dicom.1
packaging/: CMakeLists.txt
patches/: GDCM_4digitsgroup.patch  GDCM_DSDigits.patch  GDCM_metainfowarning.patch  ITK_3Direction.patch  ITK_Direction-ITK3.patch  ITK_Direction-ITK4.patch  ITK_Direction2.diff  ITK_Direction3.diff  ITK_Direction4.patch  TCLAP_inline.patch
src/: CMakeLists.txt  n2dAccessionNumberValidator.cxx  n2dAccessionNumberValidator.h  n2dAcquisition.cxx  n2dAcquisition.h  n2dCommandLineParser.cxx  n2dCommandLineParser.h  n2dDefsCommandLineArgsStructs.h  n2dDefsIO.h  n2dDefsImage.h  n2dDefsMetadata.h  n2dDicomClass.cxx  n2dDicomClass.h  n2dHeaderImporter.cxx  n2dHeaderImporter.h  n2dInputFilter.cxx  n2dInputFilter.h  n2dInputImporter.cxx  n2dInputImporter.h  n2dInstance.cxx  n2dInstance.h  n2dOtherDicomTags.cxx  n2dOtherDicomTags.h  n2dOutputExporter.cxx  n2dOutputExporter.h  n2dPatient.cxx  n2dPatient.h  n2dSeries.cxx  n2dSeries.h  n2dSlicer.cxx  n2dSlicer.h  n2dStudy.cxx  n2dStudy.h  n2dToolsDate.cxx  n2dToolsDate.h  n2dToolsMetaDataDictionary.cxx  n2dToolsMetaDataDictionary.h  n2dUIDGenerator.h  n2dVersion.cxx  n2dVersion.h  (+1 more)
src/core/: CMakeLists.txt  n2dAccessionNumberValidator.cxx  n2dAccessionNumberValidator.h  n2dAcquisition.cxx  n2dAcquisition.h  n2dCommandLineParser.cxx  n2dCommandLineParser.h  n2dDefsCommandLineArgsStructs.h  n2dDefsIO.h  n2dDefsImage.h  n2dDefsMetadata.h  n2dDicomClass.cxx  n2dDicomClass.h  n2dHeaderImporter.cxx  n2dHeaderImporter.h  n2dInputFilter.cxx  n2dInputFilter.h  n2dInputImporter.cxx  n2dInputImporter.h  n2dInstance.cxx  n2dInstance.h  n2dOtherDicomTags.cxx  n2dOtherDicomTags.h  n2dOutputExporter.cxx  n2dOutputExporter.h  n2dPatient.cxx  n2dPatient.h  n2dSeries.cxx  n2dSeries.h  n2dStudy.cxx  n2dStudy.h  n2dToolsDate.cxx  n2dToolsDate.h  n2dToolsMetaDataDictionary.cxx  n2dToolsMetaDataDictionary.h  n2dVersion.cxx  n2dVersion.h  nifti2dicom.cxx
src/gui/: Brain.icns  CMakeLists.txt  customize.cpp  customize.h  finalize.cpp  finalize.h  init.cpp  init.h  init.ui  itkImageToVTKImageFilter.txx  noodle.cxx  qnifti2dicom.cpp  qnifti2dicom.desktop  qnifti2dicom.rc  resources.qrc  vtkKWImage.cxx  vtkKWImage.h  vtkKWImageIO.cxx  vtkKWImageIO.h  wizard.cpp  wizard.h
